update FE assets

--- a/Resources/Public/assets/production/js/plugin1.html
+++ b/Resources/Public/assets/production/js/plugin1.html
@@ -1,1 +1,1 @@
-<script src="{f:uri.resource(path:"assets/production/js/plugin1-dee0d4f9a0.js", extensionName: "{site.identifier}")}"></script>
+<f:asset.script identifier="plugin1-dee0d4f9a0" src="EXT:{site.configuration.theme}/Resources/Public/assets/production/js/plugin1-dee0d4f9a0.js" />
