--- a/Resources/Public/assets/development/css/maincss.html
+++ b/Resources/Public/assets/development/css/maincss.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:"assets/development/css/main.css", extensionName: "{site.identifier}")}"></link>
+<f:asset.css identifier="main" href="EXT:{site.configuration.theme}/Resources/Public/assets/development/css/main.css" />
