--- a/Resources/Public/assets/development/js/mainjs.html
+++ b/Resources/Public/assets/development/js/mainjs.html
@@ -1,2 +1,1 @@
-<script src="{f:uri.resource(path:"assets/development/js/jquery.js", extensionName: "{site.identifier}")}"></script>
-<script src="{f:uri.resource(path:"assets/development/js/main.js", extensionName: "{site.identifier}")}"></script>
+<f:asset.script identifier="main" src="EXT:{site.configuration.theme}/Resources/Public/assets/development/js/main.js" />
