--- a/Resources/Public/assets/development/js/plugin2.html
+++ b/Resources/Public/assets/development/js/plugin2.html
@@ -1,1 +1,1 @@
-<script src="{f:uri.resource(path:"assets/development/js/plugin2.js", extensionName: "{site.identifier}")}"></script>
+<f:asset.script identifier="plugin2" src="EXT:{site.configuration.theme}/Resources/Public/assets/development/js/plugin2.js" />
