--- a/Resources/Public/assets/production/css/maincss.html
+++ b/Resources/Public/assets/production/css/maincss.html
@@ -1,1 +1,1 @@
-<link rel="stylesheet" type="text/css" href="{f:uri.resource(path:"assets/production/css/main-41eee0a2df.css", extensionName: "{site.identifier}")}"></link>
+<f:asset.css identifier="main-75c482b83d" href="EXT:{site.configuration.theme}/Resources/Public/assets/production/css/main-75c482b83d.css" />
