--- a/Resources/Public/assets/production/js/mainjs.html
+++ b/Resources/Public/assets/production/js/mainjs.html
@@ -1,2 +1,1 @@
-<script src="{f:uri.resource(path:"assets/production/js/jquery-dd04693bed.js", extensionName: "{site.identifier}")}"></script>
-<script src="{f:uri.resource(path:"assets/production/js/main-3b08a6d6ce.js", extensionName: "{site.identifier}")}"></script>
+<f:asset.script identifier="main-3b08a6d6ce" src="EXT:{site.configuration.theme}/Resources/Public/assets/production/js/main-3b08a6d6ce.js" />
