--- a/Resources/Public/assets/production/js/plugin2.html
+++ b/Resources/Public/assets/production/js/plugin2.html
@@ -1,1 +1,1 @@
-<script src="{f:uri.resource(path:"assets/production/js/plugin2-8f40848331.js", extensionName: "{site.identifier}")}"></script>
+<f:asset.script identifier="plugin2-8f40848331" src="EXT:{site.configuration.theme}/Resources/Public/assets/production/js/plugin2-8f40848331.js" />
